--- a/app/assets/stylesheets/foundation.css
+++ b/app/assets/stylesheets/foundation.css
@@ -3864,10 +3864,10 @@ textarea {
   -webkit-border-radius: 0;
   border-radius: 0;
   background-color: white;
-  font-family: "Open Sans", sans-serif;
+  font-family: inherit;
   border: 1px solid #cccccc;
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+/*  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);*/
   color: rgba(0, 0, 0, 0.75);
   display: block;
   font-size: 0.875rem;
@@ -3895,9 +3895,9 @@ textarea {
   input[type="time"]:focus,
   input[type="url"]:focus,
   textarea:focus {
-    -webkit-box-shadow: 0 0 5px #999999;
+/*    -webkit-box-shadow: 0 0 5px #999999;
     -moz-box-shadow: 0 0 5px #999999;
-    box-shadow: 0 0 5px #999999;
+    box-shadow: 0 0 5px #999999;*/
     border-color: #999999; }
   input[type="text"]:focus,
   input[type="password"]:focus,
@@ -3935,8 +3935,8 @@ textarea {
 /* Add height value for select elements to match text input height */
 select {
   height: 2.3125rem;
-  color: rgba(0, 0, 0, 0.75);
-}
+  outline: none;
+    color: rgba(0, 0, 0, 0.75); }
 
 /* Adjust margin for form elements below */
 input[type="file"],
